[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "masat"
version = "0.1.0"
description = "MASAT: Modular Attack Surface Analysis Tool"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Daniel Wood" }]

dependencies = [
  "aiohttp==3.13.3",
  "packaging==24.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "pytest-asyncio==0.25.3",
  "pytest-cov==6.0.0",
]
api = [
  "fastapi==0.115.8",
  "uvicorn==0.34.0",
]

[project.scripts]
masat = "masat.cli:main"

[tool.setuptools]
packages = ["masat", "scanners", "utils", "api"]
